--- a/prom-stack-values.yaml
+++ b/prom-stack-values.yaml
@@ -1,21 +1,19 @@
-# prom-stack-values.yaml
+# prom-stack-values.yaml 
 
-# Parte 1: Configuração do IRSA (que já estava correta)
 grafana:
+
+  adminUser: "admin-hiago"
+  adminPassword: "MinhaSenhaSuperSecreta123!" 
+
   serviceAccount:
     annotations:
-      # Este é o ARN que seu Terraform criou (correto)
       eks.amazonaws.com/role-arn: "arn:aws:iam::083523845001:role/grafana-cloudwatch-reader-vxzim07l"
   
-  # ----------------------------------------------------
-  # PARTE 2: Adiciona o Serviço LoadBalancer
-  # ----------------------------------------------------
   service:
-    type: LoadBalancer # <-- DIZ AO EKS PARA CRIAR UM NLB NA AWS
-    port: 80 # Expondo na porta 80 (padrão HTTP)
-  # ----------------------------------------------------
+    type: LoadBalancer 
+    port: 80 
   
-  # Parte 3: Configuração da Fonte de Dados (que já estava correta)
+  # Configuração da Fonte de Dados 
   datasources:
     datasources.yaml:
       apiVersion: 1
