--- a/.github/workflows/destroy-eks.yaml
+++ b/.github/workflows/destroy-eks.yaml
@@ -24,7 +24,8 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+          # CORREÇÃO: Passar o Secret diretamente
+          aws-region: ${{ secrets.AWS_REGION }} 
           role-duration-seconds: 900
 
       - name: Terraform Init
